# internal/http/gen/oas_response_encoders_gen.go
@@ -627,6 +627,20 @@ func encodeListRecordedStreamsResponse(response []RecordedStream, w http.Respons
 	return nil
 }
 
+func encodeListRuleTemplateVariablesResponse(response *RuleTemplateVariablesResponse, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeListRulesResponse(response []Rule, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
